# tree_diameter_estimator

./: CMakeLists.txt  README.md  _diameter_estimation_nodelet.cpp  diameter_estimation.cpp  diameter_estimation.hpp  estimation.cpp  estimation.hpp  main.cpp
resource/: sample.pcd
